# ArticleAPI

./: .env  .gitignore  README.md  cert.pem  docker-compose.yaml  install.bat  install.sh  key.pem  pyproject.toml  req.txt  run.bat  run.sh
src/: config.py  database.py  exceptions.py  main.py
src/admin/: admin.py  auth.py
src/api/gRPC/: article.proto  article_pb2.py  article_pb2_grpc.py  server.py
src/api/gRPC/docs/: index.html
src/api/graphql/: router.py
src/api/graphql/resolvers/: __init__.py  article.py  comment.py  user.py
src/api/graphql/types/: __init__.py  article_types.py  comment_types.py  user_types.py
src/article.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dependencies/: auth_dep.py
src/models/: __init__.py  article.py  like.py  user.py
src/schemas/: __init__.py  article_schemas.py  comment_schema.py  response_answer.py  user_schemas.py
src/service/: __init__.py  article_service.py  base.py  like_service.py  user_service.py
src/utils/: limiter_api.py
src/utils/elasticsearch/: article_search.py  base.py  connect.py
src/utils/jwt/: auth_jwt.py
src/utils/mongodb/: comments.py  connect.py
src/utils/redis/: connect.py
web/: dependencies.py  main.py
web/article_api/: articles.py  comments.py  users.py
web/pages/: create_article.py  delete_article.py  get_article.py  home.py  like.py  log.py  my_articles.py  my_likes.py  reg.py  search_articles.py
web/pages/comments/: create_comment.py  create_reply.py
web/schemas/: __init__.py  articles.py  comments.py  users.py
web/utils/: __init__.py  user_utils.py
(+3 files in other folders)
